package com.chatly.model.enums;

public enum CallStatus {
    RINGING,
    ONGOING,
    ENDED,
    MISSED,
    REJECTED
}
