package com.chatly.model.enums;

public enum CallType {
    VOICE,
    VIDEO
}
